package org.example.domain.observer;

public interface IStateObserver {
    void onStateChanged(); }
//The IStateObserver interface would be useful in this
// context to track and respond to changes in the game's state, such as moves or board updates.