package org.example.view.components;

public class PlayerPanel {
}
